feat: 初始化仓库

--- a/Deepunderstanding/P1 深入理解系列/4.前端模块化演进.md
+++ b/Deepunderstanding/P1 深入理解系列/4.前端模块化演进.md
@@ -16,7 +16,7 @@ function m2() {
 
 ```javascript
 var myModule = {
-  data: "Naprte",
+  data: "ZiJieYuan",
   foo() {
     console.log(`foo() ${this.data}`);
   },
