feat: 添加部署submodule仓库的命令维护&完善readme

--- a/Deepunderstanding/P1 深入理解系列/8.浏览器缓存.md
+++ b/Deepunderstanding/P1 深入理解系列/8.浏览器缓存.md
@@ -51,7 +51,7 @@
   - `max-age` 即最大有效时间
   - `s-maxage` 覆盖 max-age 或者 Expires 头，但是仅适用于共享缓存(比如各个代理)，私有缓存会忽略它
   - `max-stale` 表明客户端愿意接收一个已经过期的资源
-  - `min-fres`h 表示客户端希望获取一个能在指定的秒数内保持其最新状态的响应。
+  - `min-fres` 表示客户端希望获取一个能在指定的秒数内保持其最新状态的响应。
   - `stale-while-revalidate` 表明客户端愿意接受陈旧的响应，同时在后台异步检查新的响应
   - `stale-if-error` 表示如果新的检查失败，则客户愿意接受陈旧的响应
 
@@ -71,7 +71,7 @@
 
 - Last-Modified & If-Modified-Since
 
-  > 服务器通过  Last-Modified  字段告知客户端，下一次请求相同资源时时，浏览器从自己的缓存中找出“不确定是否过期的”缓存。因此在请求头中将上次的 Last-Modified 的值写入到请求头的 If-Modified-Since 字段
+  > 服务器通过  Last-Modified  字段告知客户端，下一次请求相同资源时，浏览器从自己的缓存中找出`不确定是否过期的`缓存。因此在请求头中将上次的 Last-Modified 的值写入到请求头的 If-Modified-Since 字段
 
   > 缺陷：
   > <br> 1、如果资源更新的速度是秒以下单位，那么该缓存是不能被使用的，因为它的时间单位最低是秒。
