--- a/Deepunderstanding/P1 深入理解系列/1.原型链.md
+++ b/Deepunderstanding/P1 深入理解系列/1.原型链.md
@@ -1,48 +1,207 @@
 # 原型链
 
-## 什么是原型链？
+## 构造函数创建对象
 
-- 用于实现对象之间的共享和继承。每个 JavaScript 对象都有一个内部的[[Prototype]]属性，它是一个隐藏属性，指向另一个对象。当访问一个对象的属性或方法时，如果该对象自身没有该属性或方法，JavaScript 引擎会沿着该对象的原型链向上查找，直到找到该属性或方法或找到 Object.prototype 为止。如果最终在 Object.prototype 上仍然找不到该属性或方法，则会返回 undefined
+我们先使用构造函数创建一个对象：
 
-### 原型
+```js
+function Person() {
 
-- 每个构造函数都有一个原型对象，原型对象都包含一个指向构造函数的指针，而实例都包含一个指向原型对象的内部指针
-
-### 原型链
-
-- 假如我们让原型对象等于另一个类型的实例，此时的原型对象将包含一个指向另一个原型的指针，相应地，另一个原型中也包含着一个指向另一个构造函数的指针。 假如另一个原型又是另一个类型的实例，那么上述关系依然成立，如此层层递进，就构成了实例与原型的链条。这就是所谓的原型链的基本概念。
-
-### 特点
-
-- 创建的每一个函数都有一个 prototype（原型）属性，这个属性是一个指针，指向一个对象，即原型对象
-- prototype 就是通过调用构造函数而创建的那个对象实例的原型对象，这个实例内部含有的指向原型对象的指针叫[[Prototype]]
-- 默认情况下，所有原型对象都会自动获得一个 constructor（构造函数）属性，这个属性是一个指向 prototype 属性所在函数的指针
-- 所有函数的默认原型都是 Object 的实例，因此默认原型都会包含一个内部指针，指向 Object.prototype
-
-## 原型链解决了什么问题？
-
-- MDN 原描述
-
-> 当谈到继承时，JavaScript 只有一种结构：对象。每个对象（object）都有一个私有属性指向另一个名为原型（prototype）的对象。原型对象也有一个自己的原型，层层向上直到一个对象的原型为 null。根据定义，null 没有原型，并作为这个原型链（prototype chain）中的最后一个环节。可以改变原型链中的任何成员，甚至可以在运行时换出原型，因此 JavaScript 中不存在静态分派的概念。
-
-> 尽管这种混杂通常被认为是 JavaScript 的弱点之一，但是原型继承模型本身实际上比类式模型更强大。例如，在原型模型的基础上构建类式模型（即类的实现方式）相当简单。
-
-## 代码演示
-
-```javascript
-function Person() {}
-
-// 虽然写在注释⾥，但是你要注意：
-// prototype是函数才会有的属性
-Person.prototype.name = "ZiJieYuan";
-var person1 = new Person();
-var person2 = new Person();
-console.log(person1.name); // ZiJieYuan
-console.log(person2.name); // ZiJieYuan
+}
+var person = new Person();
+person.name = 'ZiJieYuan';
+console.log(person.name) // ZiJieYuan
 ```
 
-## 原型链关系图
+在这个例子中，Person 就是一个构造函数，我们使用 new 创建了一个实例对象 person。
 
-![原型链关系](./imgs/prototype.jpg)
+很简单吧，接下来进入正题：
+
+## prototype
+
+每个函数都有一个 prototype 属性，就是我们经常在各种例子中看到的那个 prototype ，比如：
+
+```js
+function Person() {
+
+}
+// 虽然写在注释里，但是你要注意：
+// prototype是函数才会有的属性
+Person.prototype.name = 'ZiJieYuan';
+var person1 = new Person();
+var person2 = new Person();
+console.log(person1.name) // ZiJieYuan
+console.log(person2.name) // ZiJieYuan
+```
+
+那这个函数的 prototype 属性到底指向的是什么呢？是这个函数的原型吗？
+
+其实，函数的 prototype 属性指向了一个对象，这个对象正是调用该构造函数而创建的**实例**的原型，也就是这个例子中的 person1 和 person2 的原型。
+
+那什么是原型呢？你可以这样理解：每一个JavaScript对象(null除外)在创建的时候就会与之关联另一个对象，这个对象就是我们所说的原型，每一个对象都会从原型"继承"属性。
+
+让我们用一张图表示构造函数和实例原型之间的关系：
+
+![构造函数和实例原型的关系图](./imgs/prototype1.png)
+
+在这张图中我们用 Object.prototype 表示实例原型。
+
+那么我们该怎么表示实例与实例原型，也就是 person 和 Person.prototype 之间的关系呢，这时候我们就要讲到第二个属性：
+
+## \_\_proto\_\_
+
+这是每一个JavaScript对象(除了 null )都具有的一个属性，叫\_\_proto\_\_，这个属性会指向该对象的原型。
+
+为了证明这一点,我们可以在火狐或者谷歌中输入：
+
+```js
+function Person() {
+
+}
+var person = new Person();
+console.log(person.__proto__ === Person.prototype); // true
+```
+
+于是我们更新下关系图：
+
+![实例与实例原型的关系图](./imgs/prototype2.png)
+
+既然实例对象和构造函数都可以指向原型，那么原型是否有属性指向构造函数或者实例呢？
+
+## constructor
+
+指向实例倒是没有，因为一个构造函数可以生成多个实例，但是原型指向构造函数倒是有的，这就要讲到第三个属性：constructor﻿，每个原型都有一个 constructor 属性指向关联的构造函数。
+
+为了验证这一点，我们可以尝试：
+
+```js
+function Person() {
+
+}
+console.log(Person === Person.prototype.constructor); // true
+```
+
+所以再更新下关系图：
+
+![实例原型与构造函数的关系图](./imgs/prototype3.png)
+
+综上我们已经得出：
+
+```js
+function Person() {
+
+}
+
+var person = new Person();
+
+console.log(person.__proto__ == Person.prototype) // true
+console.log(Person.prototype.constructor == Person) // true
+// 顺便学习一个ES5的方法,可以获得对象的原型
+console.log(Object.getPrototypeOf(person) === Person.prototype) // true
+```
+
+了解了构造函数、实例原型、和实例之间的关系，接下来我们讲讲实例和原型的关系：
+
+## 实例与原型
+
+当读取实例的属性时，如果找不到，就会查找与对象关联的原型中的属性，如果还查不到，就去找原型的原型，一直找到最顶层为止。
+
+举个例子：
+
+```js
+function Person() {
+
+}
+
+Person.prototype.name = 'ZiJieYuan';
+
+var person = new Person();
+
+person.name = 'WuDu';
+console.log(person.name) // WuDu
+
+delete person.name;
+console.log(person.name) // ZiJieYuan
+```
+
+在这个例子中，我们给实例对象 person 添加了 name 属性，当我们打印 person.name 的时候，结果自然为 WuDu。
+
+但是当我们删除了 person 的 name 属性时，读取 person.name，从 person 对象中找不到 name 属性就会从 person 的原型也就是 person.\_\_proto\_\_ ，也就是 Person.prototype中查找，幸运的是我们找到了  name 属性，结果为 ZiJieYuan。
+
+但是万一还没有找到呢？原型的原型又是什么呢？
+
+## 原型的原型
+
+在前面，我们已经讲了原型也是一个对象，既然是对象，我们就可以用最原始的方式创建它，那就是：
+
+```js
+var obj = new Object();
+obj.name = 'ZiJieYuan'
+console.log(obj.name) // ZiJieYuan
+```
+
+所以原型对象是通过 Object 构造函数生成的，结合之前所讲，实例的 \_\_proto\_\_ 指向构造函数的 prototype ，所以我们再更新下关系图：
+
+![原型的原型关系图](./imgs/prototype4.png)
+
+## 原型链
+
+那 Object.prototype 的原型呢？
+
+null，我们可以打印：
+
+```js
+console.log(Object.prototype.__proto__ === null) // true
+```
+
+然而 null 究竟代表了什么呢？
+
+引用阮一峰老师的 [《undefined与null的区别》](http://www.ruanyifeng.com/blog/2014/03/undefined-vs-null.html) 就是：
+
+> null 表示“没有对象”，即该处不应该有值。
+
+所以 Object.prototype.\_\_proto\_\_ 的值为 null 跟 Object.prototype 没有原型，其实表达了一个意思。
+
+所以查找属性的时候查到 Object.prototype 就可以停止查找了。
+
+最后一张关系图也可以更新为：
+
+![原型链示意图](./imgs/prototype5.png)
+
+顺便还要说一下，图中由相互关联的原型组成的链状结构就是原型链，也就是蓝色的这条线。
+
+## 补充
+
+最后，补充三点大家可能不会注意的地方：
+
+### constructor
+
+首先是 constructor 属性，我们看个例子：
+
+```js
+function Person() {
+
+}
+var person = new Person();
+console.log(person.constructor === Person); // true
+```
+
+当获取 person.constructor 时，其实 person 中并没有 constructor 属性,当不能读取到constructor 属性时，会从 person 的原型也就是 Person.prototype 中读取，正好原型中有该属性，所以：
+
+```js
+person.constructor === Person.prototype.constructor
+```
+
+### \_\_proto\_\_
+
+其次是 \_\_proto\_\_ ，绝大部分浏览器都支持这个非标准的方法访问原型，然而它并不存在于 Person.prototype 中，实际上，它是来自于 Object.prototype ，与其说是一个属性，不如说是一个 getter/setter，当使用 obj.\_\_proto\_\_ 时，可以理解成返回了 Object.getPrototypeOf(obj)。
+
+### 真的是继承吗？
+
+最后是关于继承，前面我们讲到“每一个对象都会从原型‘继承’属性”，实际上，继承是一个十分具有迷惑性的说法，引用《你不知道的JavaScript》中的话，就是：
+
+继承意味着复制操作，然而 JavaScript 默认并不会复制对象的属性，相反，JavaScript 只是在两个对象之间创建一个关联，这样，一个对象就可以通过委托访问另一个对象的属性和函数，所以与其叫继承，委托的说法反而更准确些。
+
+## 原型链关系图
 
 ![原型链关系](./imgs/control.jpg)
